PLAT-6786 Move MariaDB commits (11e224ef - 706016b7)
Summary:
* Refactor ClientPreparedStatement/ServerPreparedStatemnt
* load-balance distribution ensuring repartition after failover
* Retrieve session information CLIENT_SESSION_TRACK
* Adding keyPassword option
* using "/*client prepare*/" prefix for Client Prepared Statement
* Update benchmark tests;
* Remove canUseServerTimeout and canUseServerMaxRows as not supported by engine
* Correcting java 11+ socket options setting

Test Plan: https://app.circleci.com/pipelines/github/memsql/S2-JDBC-Connector/379/workflows/7e0e0a1c-cae9-4ead-b9cd-ed821c19aecc

Reviewers: amakarovych-ua, pmishchenko-ua, adrian

Reviewed By: pmishchenko-ua

Subscribers: engineering-list

JIRA Issues: PLAT-6786

Differential Revision: https://grizzly.internal.memcompute.com/D66078